# vequil

./: .env.example  .gitignore  AUDIT.md  CLAUDE.md  README.md  conftest.py  daemon.py  gemini.md  netlify.toml  pyproject.toml  requirements.txt
agents/: crypto_feed_agent.py  scanner_agent.py
configs/: expected_sales.json  processors.json
data/: leads.json  paper_trades_v1_pre_strategy_fix.db  paper_trades_v2_pre_audit_fixes.db
data/raw/: claude_audit.csv  langchain_trace.csv  openai_usage.csv  openclaw_logs.csv  pos_expected_sales.csv
deploy/: Dockerfile  Procfile  docker-compose.yml  railway.toml
docs/: explorer.md  health-check.md  pitch_deck.md  research.md  skill.md  strategy.md  test-runner.md  trading-code.md
misc/: ARCHITECTURE.md  Procfile  README.md  get_stats.py  render.yaml  requirements.txt  test_history.py
misc/openclaw/: README_OPENCLAW.md
quant/: __init__.py  daemon.py
quant/agents/: __init__.py  crypto_feed_agent.py  (+6 more)
scripts/: check_env.py  force_resolve.py  netlify_publish.sh  run.sh  setup_aws.sh
tests/: test_agent.py  test_crypto_feed_agent.py  test_crypto_matching.py  test_expected_sales.py  test_features.py  test_kalshi_client_parsing.py  test_kelly.py  test_kelly_properties.py  test_normalizers.py  test_pipeline.py  test_pricing.py  test_pricing_properties.py  test_resolution_agent.py  test_risk_agent.py  test_rules.py  test_scanner_agent.py  test_settings.py  verify_real_ingestion.py
tmp/: dashboard.json  discrepancies.csv  expected_sales_comparison.csv  light_mode.py  light_mode2.py  make_light.py  unified_ledger.csv
(+43 files in other folders)
